--- a/GetRide/frontend/src/locales/en.json
+++ b/GetRide/frontend/src/locales/en.json
@@ -23,9 +23,9 @@
   "security": "Safe and Secure",
   "securityDescription": "Your safety and trust are our top priorities. We use a rigorous verification process and a transparent rating system to ensure security and quality.",
   "ourStory": "Our Story",
-  "ourStoryDescription": "Around the world, carpooling is a standard practice, and with Get Ride, we are introducing this concept to our region. Our initiative started with a simple but powerful idea: why travel alone when you can save money, reduce your environmental impact, and meet new people? In an era of digital connectivity, where communication and relationships play a key role, we are creating an innovative way to connect passengers and drivers, enabling a more eco-friendly and cost-effective way to travel.",
+  "ourStoryDescription": "Around the world, carpooling is a standard practice, and with <strong>Get Ride</strong> , we are introducing this concept to our region. Our initiative started with a simple but powerful idea: why travel alone when you can save money, reduce your environmental impact, and meet new people? In an era of digital connectivity, where communication and relationships play a key role, we are creating an innovative way to connect passengers and drivers, enabling a more eco-friendly and cost-effective way to travel.",
   "joinMovement": "Join the Movement with Get Ride",
-  "joinMovementDescription": "Be part of the change! Whether you're a driver with an extra seat or a passenger looking for a comfortable way to travel, Get Ride makes it easy for you to connect and travel together. Together, we can reduce traffic congestion, minimize pollution, and create stronger, more meaningful connections between people.",
+  "joinMovementDescription": "Be part of the change! Whether you're a driver with an extra seat or a passenger looking for a comfortable way to travel, <strong>Get Ride</strong> makes it easy for you to connect and travel together. Together, we can reduce traffic congestion, minimize pollution, and create stronger, more meaningful connections between people.",
   "ctaButton": "Sign Up and Travel with Us!",
   "question": "Do you have any questions or suggestions? We would love to hear from you!",
   "emailPlaceholder": "Your email address",
